      if there is no \command{false.exe} present on the path).
      
      \item If \code{options("install.lock")} is set to \code{TRUE},
      binary package installs are protected against failure similar to
      the way source package installs are protected.

      \item \code{file.exists()} and \code{unlink()} have more support
      for files > 2GB.
    }
  }

  \subsection{DEPRECATED}{
    \itemize{
      \item{zip.unpack()} is deprecated: use \code{unzip()}.
    }
  }
  \subsection{INSTALLATION}{
    \itemize{
      \item There is support for \samp{libjpeg-turbo} \emph{via}
      setting \code{JPEGDIR} to that value in \file{MkRules.local}.

      Support for \samp{jpeg-6b} has been removed.

      \item The sources now work with \samp{libpng-1.5.1},
      \samp{jpegsrc.v8c} and \samp{tiff-4.0.0beta6}.  It is possible that
      they no longer work with older versions than \samp{libpng-1.4.5}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Workaround for the incorrect values given by Windows'
      \code{casinh} function on the branch cuts.

      \item Bug fixes for drawing raster objects on \code{windows()}.  The
      symptom was the occasional raster image not being drawn, especially
      when drawing multiple raster images in a single expression.
      Thanks to Michael Sumner for report and testing.
    }
  }
}

\section{CHANGES IN R VERSION 2.12.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Building badly-written vignettes which used the default
      device (\code{pdf(file = "Rplots.pdf")} could leave the device
      open and hence the file \file{Rplots.pdf} could not be removed on
      Windows: all devices are now closed.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item In some circumstances the caret (cursor) could be positioned 
      incorrectly. (\PR{14460})
      
      \item When loading \file{Rconsole} from disk, a spurious warning
      message was sometimes shown.
      