@@ -1,6 +1,6 @@
 % File src/library/base/man/Sys.setenv.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2008 R Core Development Team
+% Copyright 1995-2011 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{Sys.setenv}
@@ -36,7 +36,9 @@ Sys.unsetenv(x)
   Non-standard \R names must be quoted in \code{Sys.setenv}: see the
   examples.  Most platforms (and POSIX) do not allow names containing
   \code{"="}.  Windows does, but the facilities provided by \R may not
-  handle these correctly so they should be avoided.
+  handle these correctly so they should be avoided.  Most platforms
+  allow setting an environment variable to \code{""}, but Windows does
+  not, and there \code{Sys.setenv("FOO=")} unsets \env{FOO}.
   
   There may be system-specific limits on the maximum length of the values
   of individual environment variables or of all environment variables.
